--- a/_includes/post.html
+++ b/_includes/post.html
@@ -30,7 +30,7 @@
 <br/>{% elsif tag.header-img %}
 <div class="head-image"><img src="{{ site.url }}/assets/{{ tag.header-img }}"/></div>
 <br/>{% endif %}
-<style>
+<!-- <style>
 .myAd1190 { display:block; width:98%; height: 280px; }
 @media(min-width: 600px) { .myAd1190 { display: none; } }
 </style>
@@ -40,20 +40,20 @@
     ></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> -->
 <br/>
       {{ post.content }}
       <br/>
       <br/>
       <!-- 블로그-하단-반응형 -->
-      <ins class="adsbygoogle"
+      <!-- <ins class="adsbygoogle"
           style="display:block; width:100%; height:300px;"
           data-ad-client="ca-pub-9134477021095729"
           data-ad-slot="2380354290"
           data-ad-format="auto"></ins>
       <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      </script> -->
     </div>
     <script>
 
