--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
 	      	lightJekyllSearch.search({
 	          	el : document.querySelector('form[name="search"] input[name="q"]'),
 	          	placeholder : '검색어를 입력해주세요.',
-	          	postJsonPath : '/posts.json'
+	          	postJsonPath : '/assets/json/posts.json'
 			});
 		</script>
       <br/>
