--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,9 @@
         <h1><a id="_title" href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
         {{ site.tagline | truncatewords:50 | markdownify }}
       </div>
+      	<form id="search">
 		{% include search.html %}
+		</form>
       <br/>
       <br/>
       <nav class="sidebar-nav heading" role="navigation">
