--- a/_includes/right-side.html
+++ b/_includes/right-side.html
@@ -1,3 +1,13 @@
+<style>
+.search {
+	width: 100%;
+    font-weight: normal;
+    display: block;
+    line-height: 1.75;
+    padding: .25rem 0;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+</style>
 <div class="right-side">
   <!-- <div class="ad-first">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -12,6 +22,10 @@
     </script>
   </div> -->
 <br/>
+<form id="search" name="search">
+   	<input type="text" name="q" id="q" value="" class="search"/>
+	{% include search.html %}
+</form>
 <br/>
   <!-- <div class="ad-second">
     블로그-스카이스크래퍼
