--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,13 @@
-
+<style>
+.search {
+	width: 100%;
+    font-weight: normal;
+    display: block;
+    line-height: 1.75;
+    padding: .25rem 0;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+</style>
 <div id="_yDrawer">
   <div id="_sidebar" class="sidebar">
     <div class="sidebar-bg" style="background-color:{{ color }};background-image:url({{ image }})"></div>
@@ -8,7 +17,10 @@
         <h1><a id="_title" href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
         {{ site.tagline | truncatewords:50 | markdownify }}
       </div>
-
+      	<form id="search" name="search">
+      		<input type="text" name="q" id="q" value="" class="search"/>
+			{% include search.html %}
+		</form>
       <br/>
       <br/>
       <nav class="sidebar-nav heading" role="navigation">
