--- a/_includes/head.html
+++ b/_includes/head.html
@@ -77,6 +77,7 @@
 
 <link rel="apple-touch-icon" href="{{ 'apple-touch-icon.png' | absolute_url }}">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <!-- Place favicon.ico in the root directory -->
 
 <!-- =============== -->
