--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <style>
 .search {
-	width: 100%;
+	width: 90%;
     font-weight: normal;
-    display: block;
+    display: inline-block;
     line-height: 1.75;
     padding: .25rem 0;
     border-bottom: 1px solid rgba(255,255,255,0.2);
@@ -19,7 +19,7 @@
       </div>
       	<form id="search" name="search">
       		<div>
-      			<span class="icon"><i class="fa fa-search"></i></span><input type="text" name="q" id="q" value="" class="search"/>
+      			<span class="icon"><i class="fa fa-search"></i></span>&nbsp;<input type="text" name="q" id="q" value="" class="search"/>
       		</div>
 			{% include search.html %}
 		</form>
