--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
       </div>
       	<form id="search" name="search">
       		<div>
-      			<span class="icon"><i class="fa fa-search"></i></span>&nbsp;<input type="text" name="q" id="q" value="" class="search"/>
+      			<span class="icon"><i class="fa fa-search"></i></span>&nbsp;&nbsp;<input type="text" name="q" id="q" value="" class="search"/>
       		</div>
 			{% include search.html %}
 		</form>
