--- a/_layouts/write.html
+++ b/_layouts/write.html
@@ -18,7 +18,11 @@ layout: base
     </div>
   </div>
   <div class="markdown-body">
-  	<textarea>dd</textarea>
-    {{ content }}
+  	<select id="categoryy">
+  		<option>{% site.featured_categories %}</option>
+  	</select>
+  	<textarea rows="35" cols="90" id="postContent">
+ㅁㄴㅇ
+  	</textarea>
   </div>
 </article>
