--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="naver-site-verification" content="22c5b4ef3bfda7fc6100671413989219de7a4ac8"/>
+<meta name="google-site-verification" content="8ifZ2VHq4KLfIujiHAqdqme29bGGUq2y7NUFAHzHLX4" />
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:type" content="article">
 
